# ShapeViewer

./: CMakeLists.txt  README.md
includes/: terminal.hpp
includes/Demo/: hierarchyDemo.h
includes/MainPage/: addPage.h  deletePage.h  mainPage.h  modifyPage.h  printPage.h
includes/Math/: matrix.h  point.h
includes/Page/: page.h  pageManager.h
includes/Shape/: segment.h  shape.h  shapeManager.h
includes/Shape/shapes/: diamond.h  rectangle.h  square.h
src/: main.cpp
src/MainPage/: addPage.cpp  deletePage.cpp  mainPage.cpp  modifyPage.cpp  printPage.cpp
src/Math/: matrix.cpp  point.cpp
src/Page/: page.cpp  pageManager.cpp
src/Shape/: segment.cpp  shape.cpp  shapeManager.cpp
src/Shape/shapes/: diamond.cpp  rectangle.cpp  square.cpp
